# gst-device-explorer

./: .gitignore  README.md  pyproject.toml
docs/: APP_PRODUCT_SPEC.md  ARCHITECTURE.md  DATA_MODEL.md  DEVELOPMENT_PRINCIPLES.md  GUI_INFORMATION_ARCHITECTURE.md  GUI_PRODUCT_SCOPE.md  GUI_ROADMAP.md  MILESTONE_1.md  MILESTONE_3.md  PIPELINE_CANDIDATES.md  README.md  ROADMAP.md  SETUP.md  SPEC.md
docs/development/: ARCHITECTURE.md  DATA_MODEL.md  GUI_INFORMATION_ARCHITECTURE.md
docs/history/: DEVELOPMENT_HISTORY.md
docs/milestones/: MILESTONE_10.md  MILESTONE_11.md  MILESTONE_12.md  MILESTONE_13.md  MILESTONE_14.md  MILESTONE_15.md  MILESTONE_16.md  MILESTONE_17.md  MILESTONE_18.md  MILESTONE_19.md  MILESTONE_2.md  MILESTONE_20.md  MILESTONE_21.md  MILESTONE_22.md  MILESTONE_23.md  MILESTONE_24.md  MILESTONE_25.md  MILESTONE_26.md  MILESTONE_26_1.md  MILESTONE_27.md  MILESTONE_28.md  MILESTONE_28_1.md  (+26 more)
tests/: test_alsa_probe.py  test_audio_diagnostics.py  test_audio_pipelines.py  test_capture.py  test_cli.py  test_config.py  test_diagnostics.py  test_discovery.py  test_errors.py  test_execution.py  test_grouping.py  test_grouping_metadata.py  test_gst_probe.py  test_gui_camera.py  test_gui_detail_pane.py  test_gui_live_snapshot.py  test_gui_model.py  test_gui_preview_runner.py  test_gui_shell.py  test_models.py  test_pipelines.py  test_presets.py  test_profiles.py  test_qt_camera_modes.py  test_ranking.py  test_report.py  test_schema.py  test_suggestions.py  test_support_bundle.py  test_tui.py  test_v4l2_probe.py  test_validation.py  test_video_diagnostics.py
(+72 files in other folders)
