[project]
name = "gst-device-explorer"
version = "0.21.0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
gui = [
    "PySide6>=6.7",
]

[project.scripts]
gst-device-explorer = "gst_device_explorer.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gst_device_explorer"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
